2009-10-01 Francesco Fumanti <francesco.fumanti@gmx.net>

    Increase version number to 0.93.0 in README file

2009-09-12 Francesco Fumanti <francesco.fumanti@gmx.net>

    Correctly compare version numbers (f.ex.: 2.10 > 2.3)

2009-09-11 Francesco Fumanti <francesco.fumanti@gmx.net>

    Enhance onboard --help output for debugging

2009-09-03 Francesco Fumanti <francesco.fumanti@gmx.net>

    Sync with revision 165 of lp:onboard

2009-08-16 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add to HACKING the command to merge code changes into .po files

2009-08-16 Francesco Fumanti <francesco.fumanti@gmx.net>

    Qualify import statements

2009-08-16 Francesco Fumanti <francesco.fumanti@gmx.net>

    Use python-distutils-extra for i18n and raise version to 0.92.0

2009-08-16 Francesco Fumanti <francesco.fumanti@gmx.net>

    Update MANIFEST.in

2009-08-16 Francesco Fumanti <francesco.fumanti@gmx.net>

    Use only one textdomain and standard po folder and filenames

2009-03-27 Chris Jones <chris.e.jones@gmail.com>

    Derive label font size from the size of the key itself. Partially solves lp:348483.

2009-03-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add TODO file.

2009-03-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add NEWS and README file.

2009-03-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Improve tarball creation when using the command: python setup.py sdist

2009-03-18 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix typo in utils.py.

2009-03-18 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 137 of lp:onboard.

2009-03-17 Chris Jones <chris.e.jones@gmail.com>

    Stop settings dialog from creating its own OnboardGtk instance to fix bug
    where an extra IconPalette would appear when the settings dialog was open.

2009-03-07 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix typo in __init__ of Pane class.

2009-03-02 Francesco Fumanti <francesco.fumanti@gmx.net>
